--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
     <html>
     <head>
-        <title>JQuery slider</title>
+        <title>Letter of recommendation</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     
