--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <div id="swapList">
-    <h2>Please fill out the form information below</h1>
+    <h2>Please fill out the information below</h1>
     <ul>
         <ol>
         <li><input type="text" id="name" value="Ada"/></li>      
@@ -33,7 +33,7 @@
         <span class="tooltiptext">Adjective that shows possesion. e.g "His" in "His bible is dirty"</span>
         </div>
 
-        <li><input type="text" id="ProfessionOrSkill" value="teacher"/></li>      
+        <li><input type="text" id="ProfessionOrSkill" value="welder"/></li>      
         <div class="tooltip">Occupation
         <span class="tooltiptext">Occupation. e.g writer, painter, dive instructor</span>
         </div>
