fixing articles, adding plurality

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <span class="tooltiptext">Enter your name</span>
         </div>
 
+        <li><input type="checkbox" id="PluralityCheck">My pronouns are plural<br></li>
+
         <li><input type="text" id="subjective" value="she"/></li>      
         <div class="tooltip">Subjective
         <span class="tooltiptext">Subject of the sentence. e.g "We" in "We pet the elephant"</span>
@@ -38,6 +40,13 @@
         <span class="tooltiptext">Occupation. e.g writer, painter, dive instructor</span>
         </div>
 
+
+<!-- 
+<label class="switch">
+    <input type="checkbox">
+    <span class="slider round"></span>
+</label>
+ -->
 
 
     </ol>
